# solidity-util

./: .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  buidler.config.ts  delegate_tests.sh  hardhat.config.ts  int2bytes3.py  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  truffle-config.js  tsconfig.json  turbo.json
.github/workflows/: build.yml  npm.yml
contracts/: BitMaskLibrary.sol  Bitmask.sol  BitmaskLibrary.sol  BitsManipulation.sol  BitsManipulationLibrary.sol  CartesiMath.sol  CartesiMathV2.sol  Decorated.sol  DelayedWithdraw.sol  IWorkerAuthManager.sol  Instantiator.sol  InstantiatorImpl.sol  InstantiatorImplV2.sol  Merkle.sol  MerkleV2.sol  Migrations.sol  SpeedBump.sol  WorkerAuthManager.sol  WorkerAuthManagerImpl.sol  WorkerManager.sol  WorkerManagerAuthManagerImpl.sol  WorkerManagerImpl.sol
contracts/test/: TestBitMaskLibrary.sol  TestBitmask.sol  TestBitmaskLibrary.sol  TestCartesiMath.sol  TestMerkle.sol
deploy/: 01_libs.ts  02_worker_manager.ts  03_delayed_withdraw.ts  03_worker_auth_manager.ts  04_worker_manager_auth_manager.ts  05_cartesi_math_test.ts  05_library_tests.ts  05_libsV2.ts  06_logarithms.ts
deployments/arbitrum_goerli/: Bitmask.json  BitsManipulationLibrary.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/avax_testnet/: Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  CartesiMath.json  CartesiMathV2.json  Merkle.json  MerkleV2.json  TestCartesiMath.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/bsc_testnet/: Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  CartesiMath.json  CartesiMathV2.json  Merkle.json  MerkleV2.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/chiado/: WorkerAuthManagerImpl.json
deployments/gnosis_chiado/: BitsManipulationLibrary.json  CartesiMathV2.json  Merkle.json  MerkleV2.json  UnrolledCordic.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/goerli/: Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  CartesiMath.json  CartesiMathV2.json  Merkle.json  MerkleV2.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/iotex_testnet/: Bitmask.json  BitsManipulationLibrary.json  CartesiMathV2.json  UnrolledCordic.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/kovan/: Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  CartesiMath.json  CartesiMathV2.json  Merkle.json  MerkleV2.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
deployments/mainnet/: BitsManipulation.json  MerkleV2.json  WorkerManagerImpl.json
deployments/matic_testnet/: Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  (+5 more)
migrations/: 1_initial_migration.js  2_deploy_libraries.js
scripts/: delegate_tests.sh
test/: DelayedWithdraw.ts  TestBitMaskLibrary.ts  TestBitmask.ts  TestBitmaskLibrary.ts  TestCartesiMath.ts  TestLogarithm.ts  TestMerkle.ts  WorkerManagerAuthManagerImpl.ts  WorkerManagerImpl.ts  client.ts  getState.ts  ground-truth.json  log2values.json  merkle.js  testCartesiMath.js  testCartesiMath.ts  utils.js
worker/: Cargo.toml  build.rs
worker/src/: lib.rs  worker_lib.rs  worker_logic.rs  worker_server.rs  worker_server_main.rs
worker/src/fold/: mod.rs  worker_delegate.rs
worker/src/fold/contracts/: mod.rs  worker_contract.rs
(+92 files in other folders)
