[package]
name = "worker"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

# main worker server binary
[[bin]]
name = "worker_server_main"
path = "src/worker_server_main.rs"

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "f43b889" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "f43b889" }
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }
tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "fc3712f" }

async-trait = "0.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
ethabi = { version = "14.0.0", default-features = false }
futures = "0.3"
im = "15.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }
tonic = "0.4"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
serde_json = "1.0"
