[package]
name = "worker"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

# main worker server binary
[[bin]]
name = "worker_server_main"
path = "src/worker_server_main.rs"

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "c4a9c05" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "c4a9c05" }
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "f5d4c72" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "f5d4c72" }
tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "a35a776" }

async-trait = "0.1"
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
ethers-core = { version = "^0.5.0", features = [ "legacy" ] }
ethers-contract = { version = "^0.5.0", features = [ "legacy" ] }
ethers-providers = { version = "^0.5.0", features = [ "ws" ] }
futures = "0.3"
im = "15.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }
tonic = "^0.5.2"

[build-dependencies]
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
serde_json = "1.0"
